Update figures for typical-group after modifications to Google sheet.

--- a/src/include/bib/teller-acuity-cards.bib
+++ b/src/include/bib/teller-acuity-cards.bib
@@ -1,3 +1,133 @@
+@ARTICLE{Heersema1988-td,
+  title        = {Age norms for visual acuity at toddler age using the acuity
+                  card method in a clinical setting},
+  author       = {Heersema, T and van Hof-van Duin, J},
+  journaltitle = {Investigative ophthalmology \& visual science},
+  date         = {1988},
+  issn         = {0146-0404,1552-5783}
+}
+@ARTICLE{McDONALD1986-dl,
+  title        = {Monocular and binocular acuity estimation in 18- to
+                  36-month-Olds: Acuity card results},
+  author       = {McDONALD, Maryalice and Ankrum, Corlene and Preston, Karen and
+                  Sebris, Lawson S and Dobson, Velma},
+  journaltitle = {Optometry and vision science: official publication of the
+                  American Academy of Optometry},
+  volume       = {63},
+  issue        = {3},
+  pages        = {181},
+  date         = {1986-03},
+  issn         = {1040-5488,1538-9235},
+  url          = {https://journals.lww.com/optvissci/abstract/1986/03000/monocular_and_binocular_acuity_estimation_in_18_.3.aspx?casa_token=647vBJpDpIoAAAAA:1ZnWoAk7cy0eEqwAoyo8V-i90mvy3NV424yr7ndvBVHZc2SClRvRioPieozj6acwf0Y88d3sfOSexAQ5NrKaVeE}
+}
+@ARTICLE{Kohl1988-kl,
+  title        = {Refractive error and preferential looking visual acuity in
+                  infants 12-24 months of age: year 2 of a longitudinal study},
+  author       = {Kohl, P and Samek, M},
+  journaltitle = {Journal of the American Optometric Association},
+  publisher    = {europepmc.org},
+  volume       = {59},
+  issue        = {9},
+  pages        = {686--690},
+  date         = {1988-09},
+  pmid         = {3183283},
+  issn         = {0003-0244},
+  url          = {https://www.ncbi.nlm.nih.gov/pubmed/3183283},
+  language     = {en}
+}
+@ARTICLE{van-Hof-van-Duin1986-ne,
+  title        = {The development of visual acuity in normal fullterm and
+                  preterm infants},
+  author       = {van Hof-van Duin, J and Mohn, G},
+  journaltitle = {Vision research},
+  volume       = {26},
+  issue        = {6},
+  pages        = {909--916},
+  date         = {1986},
+  doi          = {10.1016/0042-6989(86)90149-5},
+  pmid         = {3750874},
+  issn         = {0042-6989,1878-5646},
+  url          = {http://dx.doi.org/10.1016/0042-6989(86)90149-5},
+  language     = {en}
+}
+@ARTICLE{McDonald1986-tg,
+  title        = {Monocular acuity in normal infants: The acuity card procedure},
+  author       = {McDonald, Maryalice and Sebris, Lawson S and Mohn, Gesine and
+                  Teller, Davida Y and Dobson, Velma},
+  journaltitle = {Optometry and vision science: official publication of the
+                  American Academy of Optometry},
+  publisher    = {journals.lww.com},
+  volume       = {63},
+  issue        = {2},
+  pages        = {127},
+  date         = {1986-02},
+  issn         = {1040-5488,1538-9235},
+  url          = {https://journals.lww.com/optvissci/abstract/1986/02000/monocular_acuity_in_normal_infants__the_acuity.8.aspx},
+  urldate      = {2024-02-02}
+}
+@ARTICLE{McDonald1985-sp,
+  title        = {The acuity card procedure: a rapid test of infant acuity},
+  author       = {McDonald, M A and Dobson, V and Sebris, S L and Baitch, L and
+                  Varner, D and Teller, D Y},
+  journaltitle = {Investigative ophthalmology \& visual science},
+  publisher    = {The Association for Research in Vision and Ophthalmology},
+  volume       = {26},
+  issue        = {8},
+  pages        = {1158--1162},
+  date         = {1985-08-01},
+  pmid         = {4019107},
+  issn         = {0146-0404,1552-5783},
+  url          = {https://iovs.arvojournals.org/article.aspx?articleid=2159823&utm_medium=email&utm_source=transaction},
+  language     = {en}
+}
+@ARTICLE{Brown1986-th,
+  title        = {Visual acuity in newborn and preterm infants measured with
+                  grating acuity cards},
+  author       = {Brown, A M and Yamamoto, M},
+  journaltitle = {American journal of ophthalmology},
+  publisher    = {Elsevier BV},
+  volume       = {102},
+  issue        = {2},
+  pages        = {245--253},
+  date         = {1986-08-15},
+  doi          = {10.1016/0002-9394(86)90153-4},
+  pmid         = {3740187},
+  issn         = {0002-9394,1879-1891},
+  url          = {http://dx.doi.org/10.1016/0002-9394(86)90153-4},
+  language     = {en}
+}
+@ARTICLE{Dobson1987-cs,
+  title        = {Binocular visual acuity of neonates: the acuity card procedure},
+  author       = {Dobson, V and Schwartz, T L and Sandstrom, D J and Michel, L},
+  journaltitle = {Developmental medicine and child neurology},
+  publisher    = {Wiley Online Library},
+  volume       = {29},
+  issue        = {2},
+  pages        = {199--206},
+  date         = {1987-04},
+  doi          = {10.1111/j.1469-8749.1987.tb02136.x},
+  pmid         = {3582789},
+  issn         = {0012-1622},
+  url          = {http://dx.doi.org/10.1111/j.1469-8749.1987.tb02136.x},
+  language     = {en}
+}
+@ARTICLE{Teller1986-oc,
+  title        = {Assessment of visual acuity in infants and children: the
+                  acuity card procedure},
+  author       = {Teller, D Y and McDonald, M A and Preston, K and Sebris, S L
+                  and Dobson, V},
+  journaltitle = {Developmental medicine and child neurology},
+  publisher    = {Wiley},
+  volume       = {28},
+  issue        = {6},
+  pages        = {779--789},
+  date         = {1986-12},
+  doi          = {10.1111/j.1469-8749.1986.tb03932.x},
+  pmid         = {3817317},
+  issn         = {0012-1622,1469-8749},
+  url          = {http://dx.doi.org/10.1111/j.1469-8749.1986.tb03932.x},
+  language     = {en}
+}
 
 @ARTICLE{Clifford2005-ei,
   title     = "Are norms based on the original Teller Acuity Cards appropriate
