--- a/src/include/bib/teller-acuity-cards.bib
+++ b/src/include/bib/teller-acuity-cards.bib
@@ -1,3 +1,81 @@
+@ARTICLE{Dobson1987-cs,
+  title        = {Binocular visual acuity of neonates: the acuity card procedure},
+  author       = {Dobson, V and Schwartz, T L and Sandstrom, D J and Michel, L},
+  journaltitle = {Developmental medicine and child neurology},
+  publisher    = {Wiley Online Library},
+  volume       = {29},
+  issue        = {2},
+  pages        = {199--206},
+  date         = {1987-04},
+  doi          = {10.1111/j.1469-8749.1987.tb02136.x},
+  pmid         = {3582789},
+  issn         = {0012-1622},
+  url          = {http://dx.doi.org/10.1111/j.1469-8749.1987.tb02136.x},
+  language     = {en}
+}
+@ARTICLE{Courage1990-xe,
+  title        = {Visual acuity assessment from birth to three years using the
+                  acuity card procedure: cross-sectional and longitudinal
+                  samples},
+  author       = {Courage, M L and Adams, R J},
+  journaltitle = {Optometry and vision science: official publication of the
+                  American Academy of Optometry},
+  publisher    = {Ovid Technologies (Wolters Kluwer Health)},
+  volume       = {67},
+  issue        = {9},
+  pages        = {713--718},
+  date         = {1990-09},
+  doi          = {10.1097/00006324-199009000-00011},
+  pmid         = {2234832},
+  issn         = {1040-5488,1538-9235},
+  url          = {http://dx.doi.org/10.1097/00006324-199009000-00011},
+  language     = {en}
+}
+@ARTICLE{Wen2022-di,
+  title        = {Automated assessment of grating acuity in infants and toddlers
+                  using an eye-tracking system},
+  author       = {Wen, Jing and Yang, Bikun and Li, Xiaoqing and Cui, Jinshi and
+                  Wang, Li},
+  journaltitle = {Journal of vision},
+  publisher    = {pdfs.semanticscholar.org},
+  volume       = {22},
+  issue        = {12},
+  pages        = {8},
+  date         = {2022-11-01},
+  doi          = {10.1167/jov.22.12.8},
+  pmc          = {PMC9645362},
+  pmid         = {36331256},
+  issn         = {1534-7362},
+  url          = {https://pdfs.semanticscholar.org/da68/b38a61de7b02337e0e35d113f1024617c3bd.pdf},
+  language     = {en}
+}
+@ONLINE{Sarbajna2024-yo,
+  title   = {Comparison of Age-Appropriate Visual Acuity Tests Based on
+             Preferential Looking Principles in Infants with Retinopathy of
+             Prematurity},
+  author  = {Sarbajna, P and Vinekar, A and Manna, P and Berendschot, T and
+             {others}},
+  volume  = {10},
+  issue   = {3},
+  journaltitle = {JOJ Ophthalmology},
+  url     = {https://www.researchgate.net/profile/Puja-Sarbajna/publication/377525093_Comparison_of_Age-Appropriate_Visual_Acuity_Tests_Based_on_Preferential_Looking_Principles_in_Infants_with_Retinopathy_of_Prematurity/links/65aa72e0bf5b00662e1e5cc9/Comparison-of-Age-Appropriate-Visual-Acuity-Tests-Based-on-Preferential-Looking-Principles-in-Infants-with-Retinopathy-of-Prematurity.pdf},
+  urldate = {2024-02-16}
+}
+@ARTICLE{Mayer1995-gd,
+  title        = {Monocular acuity norms for the Teller Acuity Cards between
+                  ages one month and four years},
+  author       = {Mayer, D and Beiser, A and Warner, A F and Pratt, E M and
+                  Raye, K N and Lang, J M},
+  journaltitle = {Investigative ophthalmology \& visual science},
+  publisher    = {The Association for Research in Vision and Ophthalmology},
+  volume       = {36},
+  issue        = {3},
+  pages        = {671--685},
+  date         = {1995-03-01},
+  pmid         = {7890497},
+  issn         = {0146-0404,1552-5783},
+  url          = {https://iovs.arvojournals.org/article.aspx?articleid=2179925}
+}
 @ARTICLE{Heersema1988-td,
   title        = {Age norms for visual acuity at toddler age using the acuity
                   card method in a clinical setting},
@@ -6,10 +84,10 @@
   date         = {1988},
   issn         = {0146-0404,1552-5783}
 }
-@ARTICLE{McDONALD1986-dl,
+@ARTICLE{McDonald1986-dl,
   title        = {Monocular and binocular acuity estimation in 18- to
                   36-month-Olds: Acuity card results},
-  author       = {McDONALD, Maryalice and Ankrum, Corlene and Preston, Karen and
+  author       = {McDonald, Maryalice and Ankrum, Corlene and Preston, Karen and
                   Sebris, Lawson S and Dobson, Velma},
   journaltitle = {Optometry and vision science: official publication of the
                   American Academy of Optometry},
