More work on vss-2025-submission

--- a/src/include/bib/teller-acuity-cards.bib
+++ b/src/include/bib/teller-acuity-cards.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Leone2014-rg,
+  title        = {Normative visual acuity in infants and preschool-aged children
+                  in Sydney},
+  author       = {Leone, Jody F and Mitchell, Paul and Kifley, Annette and Rose,
+                  Kathryn A and {Sydney Childhood Eye Studies}},
+  journaltitle = {Acta ophthalmologica},
+  publisher    = {Wiley},
+  volume       = {92},
+  issue        = {7},
+  pages        = {e521--9},
+  date         = {2014-11},
+  doi          = {10.1111/aos.12366},
+  pmid         = {24606232},
+  issn         = {1755-375X,1755-3768},
+  url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/aos.12366},
+  keywords     = {ATS HOTV EVA; logMAR VA; population-based; preschool children;
+                  teller acuity cards II; visual acuity},
+  language     = {en}
+}
 @ARTICLE{Dobson1987-cs,
   title        = {Binocular visual acuity of neonates: the acuity card procedure},
   author       = {Dobson, V and Schwartz, T L and Sandstrom, D J and Michel, L},
